Se creo el composable de la informacion del usuario y los botones de las acciones del usuario y se acomodo todo en el contenido principal, ademas se hicieron correciones al padding de la foto del usuario

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">replicationLinkedIn</string>
+    <string name="user_name">Karim BELABED</string>
+    <string name="user_profession">Product Owner and Designer UX/UI I CSPO, PSM</string>
+    <string name="user_degree">GALIAN - Heriot-Watt University</string>
+    <string name="user_location">Paris, Íle-de-France, France</string>
+    <string name="user_contacts">Plus de 500 relations</string>
 </resources>
