Se creo el composable para la descripcion del usuario y se agrego al contenido principal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="user_degree">GALIAN - Heriot-Watt University</string>
     <string name="user_location">Paris, Íle-de-France, France</string>
     <string name="user_contacts">Plus de 500 relations</string>
+    <string name="user_description">I am a Scrum qualified Product Owner and Designer highly experienced in business transformation, digital strategy, and design.</string>
 </resources>
