--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="user_contacts">Plus de 500 relations</string>
     <string name="user_description">I am a Scrum qualified Product Owner and Designer highly experienced in business transformation, digital strategy, and design.</string>
     <string name="user_activity">Les derniers posts et commentaries de Karims´afficheront ici.</string>
+    <string name="user_acerca">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
 </resources>
